--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
     <!-- TRIVIA APP JS -->
-    <script src="./assets/javascript/app.js"></script>
+    <script src="./assets/javascript/javascript.js"></script>
 
 
 </body>
